crates/oxvg_actions/src/snapshots/oxvg_actions__actions__select-3.snap
---
source: crates/oxvg_actions/src/actions.rs
expression: actor.root.serialize().unwrap()
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:oxvg="https://oxvg.noahwbaldwin.me"><g color="#000"/><g color="#000"/><path fill="#404040"/><path fill="#404040"/><path fill="#dcddde"/><path fill="#0064ff"/><oxvg:state><oxvg:history><oxvg:action oxvg:id="Select"><oxvg:arg>path</oxvg:arg></oxvg:action><oxvg:action oxvg:id="Select"><oxvg:arg>7, 9</oxvg:arg></oxvg:action></oxvg:history><oxvg:selection oxvg:ids="7, 9"/></oxvg:state></svg>
