crates/oxvg_actions/src/snapshots/oxvg_actions__actions__select-4.snap
---
source: crates/oxvg_actions/src/actions.rs
expression: actor.derive_state().unwrap()
---
DerivedState {
    history: [
        Select(
            Cow(
                "path",
            ),
        ),
        Select(
            Cow(
                "7, 9",
            ),
        ),
    ],
    selection: [
        7,
        9,
    ],
    info: Some(
        Info {
            element_id: Some(
                Path,
            ),
            content_model: ContentModel {
                permitted_categories: ElementCategory(
                    Animation | BasicShape | Container | Descriptive | FilterPrimitive | Gradient | Graphics | GraphicsReferencing | LightSource | NeverRendered | PaintServer | Renderable | Shape | Structural | StructurallyExternal | TextContent | TextContentChild | TransferFunction | Uncategorised,
                ),
                permitted_elements: {
                    ClipPath,
                    Marker,
                    Mask,
                    Script,
                    Style,
                },
            },
            attributes: AttrModel {
                expected_attribute_groups: AttributeGroup(
                    AnimationAddition | AnimationAttributeTarget | AnimationEvent | AnimationTargetElement | AnimationTiming | AnimationValue | Aria | ConditionalProcessing | Core | DocumentEvent | DocumentElementEvent | FilterPrimitive | GraphicalEvent | GlobalEvent | Presentation | TransferFunction | XLink,
                ),
                expected_attributes: {
                    D,
                    ExternalResourcesRequired,
                    PathLength,
                },
                values: {
                    Fill: Cow(
                        "#404040",
                    ),
                },
            },
            text: Some(
                Static(
                    "",
                ),
            ),
        },
    ),
}
